--- a/requirements.txt
+++ b/requirements.txt
@@ -19,7 +19,7 @@ hyperframe==6.1.0
 idna==3.10
 jiter==0.10.0
 mangum==0.19.0
-openai==1.97.0
+anthropic==0.34.2
 packaging==25.0
 postgrest==1.1.1
 pydantic==2.11.7
