--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ idna==3.10
 jiter==0.10.0
 mangum==0.19.0
 anthropic==0.34.2
+openai==1.97.0  # Still needed for Whisper speech-to-text
 packaging==25.0
 postgrest==1.1.1
 pydantic==2.11.7
